--- a/htmx/templates/process.html
+++ b/htmx/templates/process.html
@@ -6,6 +6,6 @@
 {{ else }}
 <div class="alert alert-danger" role="alert">
   <h4 class="alert-heading">No!</h4>
-  <p>There was an error submitting your form.</p>
+  <p>He is not a good boy.</p>
 </div>
 {{ end }}
