--- a/htmx/templates/index.html
+++ b/htmx/templates/index.html
@@ -59,7 +59,7 @@
                 <label class="block text-gray-700 text-sm font-bold mb-2" for="good-boy">
                     Who is a good boy?
                 </label>
-                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="good-boy" name="goodboy"  type="text" placeholder="Your answer">
+                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"  name="goodboy"  type="text" placeholder="Your answer">
             </div>
       <div class="overflow-hidden">
         <button
@@ -70,7 +70,7 @@
           class="inline-flex items-center h-8 px-4 m-2 text-sm text-blue-100 transition-colors duration-150 bg-blue-700 rounded-lg focus:shadow-outline hover:bg-blue-800"
           href=""
         >
-          Process
+          Submit
         </button>
       </div>
       </form>
