--- a/htmx/templates/index.html
+++ b/htmx/templates/index.html
@@ -59,11 +59,11 @@
                 <label class="block text-gray-700 text-sm font-bold mb-2" for="good-boy">
                     Who is a good boy?
                 </label>
-                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"  name="goodboy"  type="text" placeholder="Your answer">
+                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="goodboy" name="goodboy"  type="text" placeholder="Your answer">
             </div>
       <div class="overflow-hidden">
         <button
-          id="button-test-4"
+          id="button-test-1"
           hx-post="/process"
           hx-target="#result"
           hx-swap="innerHTML"
